app/node/tn12reset/patch-kaspad.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kaspad
  namespace: kaspa
spec:
  serviceName: tn12reset-kaspad
  selector:
    matchLabels:
      app: tn12reset-kaspad
  template:
    metadata:
      labels:
        app: tn12reset-kaspad
    spec:
      containers:
        - name: kaspad
          image: kkluster/rusty-kaspa:tn12
          imagePullPolicy: Always
          args:
            - /app/kaspad
            - --appdir=/app/data
            - --yes
            - --nologfiles
            - --disable-upnp
            - --enable-unsynced-mining
            - --utxoindex
            - --testnet
            - --netsuffix=12
            - --rpclisten=0.0.0.0:16312
            - --rpclisten-borsh=0.0.0.0:17218
            - --rpclisten-json=0.0.0.0:18114
            - --externalip=$(NODE_IP)
            - --addpeer=23.118.8.168
            - --addpeer=87.70.133.178
          ports:
            - name: grpc
              containerPort: 16312
              protocol: TCP
            - name: rpc
              containerPort: 16311
              protocol: TCP
            - name: wrpc-borsh
              containerPort: 17218
              protocol: TCP
            - name: wrpc-json
              containerPort: 18114
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
          readinessProbe:
            tcpSocket:
              port: 16312
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 16312
            initialDelaySeconds: 30
            periodSeconds: 20
          startupProbe:
            tcpSocket:
              port: 16312
            periodSeconds: 10
            failureThreshold: 60

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 300Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kaspad
  namespace: kaspa
  labels:
    app: tn12reset-kaspad
spec:
  $patch: replace
  clusterIP: None
  selector:
    app: tn12reset-kaspad
  ports:
    - name: grpc
      port: 16312
      targetPort: grpc
      protocol: TCP
    - name: rpc
      port: 16311
      targetPort: rpc
      protocol: TCP
    - name: wrpc-borsh
      port: 17218
      targetPort: wrpc-borsh
      protocol: TCP
    - name: wrpc-json
      port: 18114
      targetPort: wrpc-json
      protocol: TCP
