app/node/tn12reset/public-rpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tn12reset-kaspad-public-rpc-lb
  namespace: kaspa
  labels:
    app: tn12reset-kaspad
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: tn12reset-kaspad
  ports:
    - name: rpc
      protocol: TCP
      port: 16311
      targetPort: 16311
